# mini-analyses

./: .gitignore
20220816_missoula_heat/: 20220816_missoula_heat.html  20220816_missoula_heat.qmd
R/: functions.R
drought_stats/: pyproject.toml
drought_stats/R/: block_lvl_population.R  climate_stats.R  county_in_drought.R
drought_stats/data/: latest_pid.fgb  pop_raster.tif
drought_stats/drought_stats/: get.py
mini_dash/: index.html
wet_bulb_precip/: aceabsar.csv  aceashla.csv  acebento.csv  acebigti.csv  acebowma.csv  acebozem.csv  acebrady.csv  acebroad.csv  acebusby.csv  acebynum.csv  acechest.csv  acecoffe.csv  acecoone.csv  acecrowa.csv  acedupuy.csv  acefores.csv  aceharlo.csv  acehavre.csv  acehuntl.csv  aceingom.csv  acelamed.csv  acelavin.csv  acelodge.csv  acelorin.csv  acematad.csv  acemelvi.csv  acemidwa.csv  acemiles.csv  acemocca.csv  acemolts.csv  acemosbs.csv  acemosnw.csv  acemusse.csv  aceoilmo.csv  aceotter.csv  acerothi.csv  aceround.csv  aceroyeg.csv  aceryega.csv  acesacos.csv  (+13 more)
